# redteaming-ai

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml  quick_start.sh  red_team_agents.py  requirements.txt  ruff.toml  streamlit_demo.py  vulnerable_app.py
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
.github/workflows/: ci.yml
src/redteaming_ai/: __init__.py  __main__.py  adapters.py  agents.py  api.py  api_logging.py  api_models.py  assessment_service.py  attack_corpus.py  attack_generation.py  campaigns.py  cli.py  config.py  evaluators.py  observability.py  reporting.py  service_logging.py  storage.py  target.py  web.py
src/redteaming_ai/corpus_assets/: __init__.py  data_exfiltration.json  jailbreak.json  prompt_injection.json
tests/: conftest.py  test_adapters.py  test_api.py  test_cli.py  test_config.py  test_corpus_generation.py  test_regressions.py  test_storage.py
